link geotagged image of permit and water user

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,6 +11,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/component/bubble.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
@@ -26,7 +27,7 @@
         </button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="summary-tab" data-bs-toggle="tab" data-bs-target="#summaryTab" type="button" role="tab" aria-controls="summaryTab" aria-selected="false">
+        <button class="nav-link .btn-3d" id="summary-tab" data-bs-toggle="tab" data-bs-target="#summaryTab" type="button" role="tab" aria-controls="summaryTab" aria-selected="false">
           Summary Report
         </button>
       </li>
