--- a/public/inventory-summary.html
+++ b/public/inventory-summary.html
@@ -62,7 +62,7 @@
               <h5 class="modal-title" id="consumableModalLabel">Consumable Details</h5>
               <button
                 type="button"
-                class="btn-close"
+                class="btn-close btn-3d"
                 data-bs-dismiss="modal"
                 aria-label="Close"
               ></button>
@@ -73,7 +73,7 @@
             <div class="modal-footer">
               <button
                 type="button"
-                class="btn btn-secondary"
+                class="btn btn-3d btn-secondary"
                 data-bs-dismiss="modal"
               >
                 Close
@@ -96,7 +96,7 @@
                 </h5>
               </div>
               <div class="d-flex flex-column align-items-end">
-                <button type="button" class="btn-close mb-2" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d mb-2" data-bs-dismiss="modal" aria-label="Close"></button>
                 <strong>Total Amount: <span id="totalAmount" class="text-dark"></span></strong>
               </div>
             </div>
@@ -133,7 +133,7 @@
 
             <!-- Modal Footer -->
             <div class="modal-footer justify-content-between align-items-center px-4 border-top-0 pb-4">
-              <button id="generatePdfBtn" class="btn btn-outline-danger" data-userid="USER_ID_HERE">
+              <button id="generatePdfBtn" class="btn btn-3d btn-outline-danger" data-userid="USER_ID_HERE">
                 <i class="bi bi-file-earmark-pdf me-1"></i> Generate PDF
               </button>
               <div></div>
@@ -150,7 +150,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">ICS PDF Report</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+              <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
               <!-- PDF content will be injected here -->
