--- a/public/user-management.html
+++ b/public/user-management.html
@@ -40,13 +40,13 @@
             />
           </div>
 
-        <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
+        <button id="refreshBtn" class="btn btn-3d btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
           <i class="bi bi-arrow-clockwise me-1"></i> 
         </button>
           <!-- Add User Button -->
           <button
             id="showAddUserFormBtn"
-            class="btn btn-outline-success flex-shrink-0"
+            class="btn btn-3d btn-outline-success flex-shrink-0"
             style="white-space: nowrap;"
           >
             <i class="bi bi-person-plus me-1"></i> Add User
@@ -88,7 +88,7 @@
             <form id="addUserForm" class="needs-validation" novalidate>
               <div class="modal-header text-white">
                 <h5 class="modal-title fw-semibold" id="addUserModalLabel">Add New User</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
               <div class="modal-body px-4 py-3">
@@ -190,7 +190,7 @@
               </div>
 
               <div class="modal-footer px-4 py-3">
-                <button type="submit" class="btn btn-success w-100 fw-semibold">Add User</button>
+                <button type="submit" class="btn btn-3d btn-success w-100 fw-semibold">Add User</button>
               </div>
             </form>
           </div>
@@ -206,7 +206,7 @@
                 <h5 class="modal-title" id="editUserModalLabel">
                   <i class="bi bi-pencil-square me-2"></i>Edit User
                 </h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
               <div class="modal-body">
@@ -330,7 +330,7 @@
                   </div>
                 </div>
               <div class="modal-footer">
-                <button type="submit" class="btn btn-success w-100">
+                <button type="submit" class="btn btn-3d btn-success w-100">
                   <i class="bi bi-save me-1"></i>Update User
                 </button>
               </div>
