--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/dashboard.css">
   <link rel="stylesheet" href="css/admin/admin-dashboard.css">
+  <link rel="stylesheet" href="css/component/bubble.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
@@ -18,9 +19,9 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4 d-flex flex-column" id="page-content" style="min-height: 100vh;">
-      <p class="welcome-banner">
+      <h3 class="welcome-text">
         Welcome Admin
-      </p>
+      </h3>
 
     <div class="scorecard-wrapper">
       <div class="scorecard">
