--- a/public/ics.html
+++ b/public/ics.html
@@ -28,11 +28,11 @@
             <span class="input-group-text">Search</span>
             <input type="text" id="searchBar" class="form-control" placeholder="Enter item name..." />
           </div>
-          <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
+          <button id="refreshBtn" class="btn btn-3d btn-3d btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
           <i class="bi bi-arrow-clockwise me-1"></i> 
           </button>
-          <button id="addBtn" class="btn btn-primary" style="white-space: nowrap;">
-            <i class="bi bi-plus-circle me-1"></i> Add
+          <button id="addBtn" class="btn btn-3d btn-primary" style="white-space: nowrap;">
+            <i class="bi bi-plus-circle me-1"></i>
           </button>
         </div>
       </div>
@@ -69,7 +69,7 @@
             <form id="addICSForm" class="needs-validation" novalidate>
               <div class="modal-header text-white">
                 <h5 class="modal-title" id="addICSModalLabel">Add ICS Entry</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
               <div class="modal-body px-4 pt-3 pb-1">
@@ -172,8 +172,8 @@
               </div>
 
               <div class="modal-footer px-4 py-3">
-                <button type="submit" class="btn btn-primary">Save ICS</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-3d btn-primary">Save ICS</button>
+                <button type="button" class="btn btn-3d btn-secondary" data-bs-dismiss="modal">Cancel</button>
               </div>
             </form>
           </div>
@@ -187,7 +187,7 @@
             <form id="editICSForm" class="needs-validation" novalidate>
               <div class="modal-header text-dark">
                 <h5 class="modal-title" id="editICSModalLabel">Edit ICS Entry</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
               <div class="modal-body px-4 pt-3 pb-1">
@@ -293,13 +293,13 @@
               </div>
 
               <div class="modal-footer px-4 py-3">
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-3d btn-primary">
                   <i class="bi bi-save"></i> Update ICS
                 </button>
-                <button type="button" id="deleteICSButton" class="btn btn-danger" disabled>
+                <button type="button" id="deleteICSButton" class="btn btn-3d btn-danger" disabled>
                   <i class="bi bi-trash"></i> Delete
                 </button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                <button type="button" class="btn btn-3d btn-secondary" data-bs-dismiss="modal">
                   <i class="bi bi-x-circle"></i> Cancel
                 </button>
               </div>
