--- a/public/water-user.html
+++ b/public/water-user.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/wrus.css">
+  <link rel="stylesheet" href="css/component/bubble.css">
 </head>
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
@@ -28,18 +29,18 @@
 
           <!-- Buttons -->
           <div class="d-flex flex-wrap flex-lg-nowrap gap-2 justify-content-center justify-content-lg-start">
-            <button id="refreshBtn" class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
+            <button id="refreshBtn" class="btn btn-3d btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center">
               <i class="bi bi-arrow-clockwise me-1"></i>
             </button>
 
-            <button class="btn btn-success shadow-sm px-3 py-2 d-flex align-items-center gap-2" id="exportBtn">
+            <button class="btn btn-3d btn-success shadow-sm px-3 py-2 d-flex align-items-center gap-2" id="exportBtn">
               <span class="d-inline-flex justify-content-center align-items-center bg-light text-success rounded-circle" style="width: 24px; height: 24px;">
                 <i class="bi bi-download"></i>
               </span>
               Export
             </button>
 
-            <button class="btn btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center" data-bs-toggle="modal" data-bs-target="#addwusModal">
+            <button class="btn btn-3d btn-primary shadow-sm px-3 py-2 d-flex align-items-center justify-content-center" data-bs-toggle="modal" data-bs-target="#addwusModal">
               <i class="bi bi-plus-circle"></i>
             </button>
           </div>
@@ -105,11 +106,13 @@
                 <h5 class="modal-title text-light" id="addwusModalLabel">
                   <i class="bi bi-droplet-half me-2"></i>Add Water User
                 </h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
               <div class="modal-body px-4 py-3">
                 <div class="row g-3">
+
+                <input type="hidden" id="wusGeotagUrl" value="">
 
                 <div class="col-md-6">
                   <label for="permitNoInput" class="form-label">
@@ -161,6 +164,15 @@
                 </div>
 
                 <div class="col-md-6">
+                  <label for="type" class="form-label">Type of Water Source <span class="text-danger">*</span></label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="bi bi-toggles2"></i></span>
+                    <input type="text" class="form-control" id="type" required>
+                    <div class="invalid-feedback">Please specify the water user type.</div>
+                  </div>
+                </div>
+
+                <div class="col-md-6">
                   <label for="latitude" class="form-label">Latitude <span class="text-danger">*</span></label>
                   <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-compass-fill"></i></span>
@@ -189,15 +201,6 @@
                 </div>
 
                 <div class="col-md-6">
-                  <label for="type" class="form-label">Type of Water Source <span class="text-danger">*</span></label>
-                  <div class="input-group">
-                    <span class="input-group-text"><i class="bi bi-toggles2"></i></span>
-                    <input type="text" class="form-control" id="type" required>
-                    <div class="invalid-feedback">Please specify the water user type.</div>
-                  </div>
-                </div>
-
-                <div class="col-md-6">
                   <label for="remarks" class="form-label">Remarks</label>
                   <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-chat-left-text"></i></span>
@@ -219,8 +222,8 @@
               </div>
 
               <div class="modal-footer">
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-primary">
+                <button type="button" class="btn btn-3d btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-3d btn-primary">
                   <i class="bi bi-save me-1"></i> Save
                 </button>
               </div>
@@ -239,11 +242,13 @@
                 <h5 class="modal-title" id="editwusModalLabel">
                   <i class="bi bi-pencil-square me-2"></i>Edit Water User
                 </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
 
               <div class="modal-body px-4 py-3">
                 <div class="row g-3">
+
+                  <input type="hidden" id="editWusGeotagUrl" value="">
 
                   <div class="col-md-6">
                     <label for="permitNoInputEdit" class="form-label">
@@ -296,6 +301,15 @@
                   </div>
 
                   <div class="col-md-6">
+                    <label for="editType" class="form-label">Type of Water Source <span class="text-danger">*</span></label>
+                    <div class="input-group">
+                      <span class="input-group-text"><i class="bi bi-toggles2"></i></span>
+                      <input type="text" class="form-control" id="editType" required>
+                      <div class="invalid-feedback">Please specify the water user type.</div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
                     <label for="editLatitude" class="form-label">Latitude <span class="text-danger">*</span></label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-compass-fill"></i></span>
@@ -322,15 +336,6 @@
                   </div>
 
                   <div class="col-md-6">
-                    <label for="editType" class="form-label">Type of Water Source <span class="text-danger">*</span></label>
-                    <div class="input-group">
-                      <span class="input-group-text"><i class="bi bi-toggles2"></i></span>
-                      <input type="text" class="form-control" id="editType" required>
-                      <div class="invalid-feedback">Please specify the water user type.</div>
-                    </div>
-                  </div>
-
-                  <div class="col-md-6">
                     <label for="editRemarks" class="form-label">Remarks</label>
                     <div class="input-group">
                       <span class="input-group-text"><i class="bi bi-chat-left-text"></i></span>
@@ -352,8 +357,8 @@
               </div>
 
               <div class="modal-footer">
-                <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-warning">
+                <button type="button" class="btn btn-3d btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-3d btn-warning">
                   <i class="bi bi-save me-1"></i> Update
                 </button>
               </div>
@@ -372,7 +377,7 @@
               <h5 class="modal-title" id="imageUploadModalLabel">
                 <i class="bi bi-image-fill me-2 text-primary"></i> Upload and Preview Image
               </h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              <button type="button" class="btn-close btn-3d" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
 
             <!-- Body -->
@@ -386,15 +391,18 @@
               </label>
 
               <div class="small text-muted">Click or drag an image here to upload</div>
+
               <input type="hidden" id="currentGeotaggedUrl">
+
+              <input type="hidden" id="currentPermitNo" name="currentPermitNo" />
 
               <!-- Action Buttons -->
               <div class="d-flex justify-content-center gap-2 mt-3 flex-wrap">
-                <a id="viewImageLink" href="#" target="_blank" class="btn btn-outline-primary d-none">
+                <a id="viewImageLink" href="#" target="_blank" class="btn btn-3d btn-3d btn-outline-primary d-none">
                   <i class="bi bi-eye me-1"></i> View Full Image
                 </a>
 
-                <button id="uploadGeotaggedBtn" class="btn btn-success d-none">
+                <button id="uploadGeotaggedBtn" class="btn btn-3d btn-3d btn-success d-none">
                   <i class="bi bi-cloud-arrow-up me-1"></i> Upload Geotagged Photo
                 </button>
               </div>
@@ -410,5 +418,6 @@
   <script type="module" src="js/wrus/wrus-init.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/browser-image-compression@latest/dist/browser-image-compression.js"></script>
+      <div id="toast-container" class="toast-message"></div>
 </body>
 </html>
