change announcement modal

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -200,6 +200,11 @@
                 <i class="bi bi-box-arrow-up"></i> Assign Item
               </button>
 
+              <!-- Reassign Item -->
+              <button id="reassignItemBtn" class="btn btn-3d d-flex align-items-center justify-content-center gap-2 text-white bg-danger border border-danger rounded-2">
+                <i class="bi bi-arrow-left-right"></i> Reassign Item
+              </button>
+
               <!-- View Ledger -->
               <button id="viewLedgerBtn" class="btn btn-3d d-flex align-items-center justify-content-center gap-2 text-white bg-info border border-info rounded-2">
                 <i class="bi bi-journal-text"></i> View Ledger
@@ -210,6 +215,7 @@
           </div>
         </div>
       </div>
+
 
       <!-- Add Stock Modal -->
       <div class="modal fade" id="addStockModal" tabindex="-1" aria-labelledby="addStockModalLabel" aria-hidden="true">
