--- a/public/water-user.html
+++ b/public/water-user.html
@@ -102,8 +102,8 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
           <div class="modal-content shadow-sm">
             <form id="addWusForm" class="needs-validation" novalidate>
-              <div class="modal-header bg-primary text-white">
-                <h5 class="modal-title text-light" id="addwusModalLabel">
+              <div class="modal-header">
+                <h5 class="modal-title" id="addwusModalLabel">
                   <i class="bi bi-droplet-half me-2"></i>Add Water User
                 </h5>
                 <button type="button" class="btn-close btn-3d btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -238,7 +238,7 @@
           <div class="modal-content shadow-sm">
             <form id="editWusForm" class="needs-validation" novalidate>
               <input type="hidden" id="editWusId">
-              <div class="modal-header bg-warning text-dark">
+              <div class="modal-header">
                 <h5 class="modal-title" id="editwusModalLabel">
                   <i class="bi bi-pencil-square me-2"></i>Edit Water User
                 </h5>
