--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -106,19 +106,20 @@
       </div>
     </div>
     <!-- Announcement Modal -->
-    <div class="modal fade" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
+    <div class="modal fade water-modal" id="announcementModal" tabindex="-1" aria-labelledby="announcementModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="announcementModalLabel">📢 Announcement</h5>
+        <div class="modal-content water-modal-content">
+          <div class="modal-header water-modal-header">
+            <h5 class="modal-title" id="announcementModalLabel">Announcement</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body water-modal-body">
             <p id="announcementMessage">Default message</p>
           </div>
         </div>
       </div>
     </div>
+
   </div>
 
   </div>
