improve sidebar title and reduce padding to page-content

--- a/public/water-user.html
+++ b/public/water-user.html
@@ -15,7 +15,7 @@
 <body>
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
-    <div class="container-fluid p-4" id="page-content">
+    <div class="container-fluid p-2" id="page-content">
       <h2 class="mb-0 h5 h2-sm">
         <i class="bi bi-droplet-half"></i> Water Users and Sources
       </h2>
@@ -49,7 +49,7 @@
       </div>
       
       <!-- Water Source Filter Toggle Button -->
-      <button class="btn btn-outline-info mb-2" id="toggleWaterSourceFilterBtn">
+      <button class="btn btn-outline-dark mb-2" id="toggleWaterSourceFilterBtn">
         Show Water Source Filter
       </button>
 
