--- a/public/user-management.html
+++ b/public/user-management.html
@@ -17,7 +17,7 @@
   <div class="d-flex flex-column flex-md-row" id="wrapper">
     <div id="sidebarContainer"></div>
     <!-- Page Content -->
-    <div class="container-fluid p-4" id="page-content">
+    <div class="container-fluid p-2" id="page-content">
 
       <div class="mb-4">
         <!-- Header at the top -->
@@ -55,7 +55,7 @@
       </div>
 
       <!-- Data Table -->
-      <div class="container-fluid p-3">
+      <div class="container-fluid">
         <div class="table-responsive">
           <table>
             <thead class="table-primary text-center">
